conformance/tests/httproute-multiple-method-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multiple-method-matching
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /multi-method
      method: GET
      methods:
      - GET
      - POST
      - PUT
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /multi-method-with-header
      method: DELETE
      methods:
      - DELETE
      - PATCH
      headers:
      - name: version
        value: one
    backendRefs:
    - name: infra-backend-v2
      port: 8080
